[package]
name = "tg-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.17.2"
futures-channel = "0.3.21"
futures-util = "0.3.21"
tungstenite = "0.17.3"
log = "0.4.0"
env_logger = "0.8.4"
tokio = {version = "1.20.1", features=["full"]}
serde_json = "1.0.83"
serde = {version="1.0.143", features=["derive"]}